--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
 
     <h3>What I've worked on in the past</h2>
 
-    <ul>
-        <li>Video: <a href="https://www.youtube.com/watch?v=FuNgy8Ag4DE">BSDCan 2018: Improving netdump performance and hardware support</a></li>
-        <li><a href="https://smartos.org/bugview/OS-6390">OS-6390: hati_demap_func should take pagesize into account</a></li>
-        <li><a href="https://smartos.org/bugview/MANATEE-371">MANATEE-371: Want ISM for SysV Shared Memory in Postgres >= 9.3</a></li>
-        <li><a href="https://smartos.org/bugview/OS-6239">OS-6239: Simplify SMAP relocations with krtld</a></li>
-        <li><a href="https://github.com/gwydirsam/bsd-coredump-history">The History and Future of Core Dumps in FreeBSD</a></li>
-    </ul>
+        <ul>
+            <li>Video: <a href="https://www.youtube.com/watch?v=FuNgy8Ag4DE">BSDCan 2018: Improving netdump performance and hardware support</a></li>
+            <li><a href="https://smartos.org/bugview/OS-6390">OS-6390: hati_demap_func should take pagesize into account</a></li>
+            <li><a href="https://smartos.org/bugview/MANATEE-371">MANATEE-371: Want ISM for SysV Shared Memory in Postgres >= 9.3</a></li>
+            <li><a href="https://smartos.org/bugview/OS-6239">OS-6239: Simplify SMAP relocations with krtld</a></li>
+            <li>Video: <a href="https://www.youtube.com/watch?v=-ebuXo668Mk">BSDCan 2017: The History and Future of Core Dumps in FreeBSD</a></li>
+            <li><a href="https://github.com/gwydirsam/bsd-coredump-history">The History and Future of Core Dumps in FreeBSD</a></li>
+        </ul>
 
 </body>
 
