link to resume directly

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <ul>
-        <li><a href="https://github.com/gwydirsam/Resume">Resume</a></li>
+        <li><a href="https://github.com/gwydirsam/Resume/raw/master/resume.pdf">Resume</a></li>
         <li>Github: <a href="https://github.com/gwydirsam">github.com/gwydirsam</a></li>
         <li>LinkedIn: <a href="https://linkedin.com/in/gwydirsam">linkedin.com/in/gwydirsam</a></li>
     </ul>
